# gesture_recognition_nuitrack

./: .gitignore  CMakeLists.txt  README.md  package.xml
dataset/: dataset.csv  gesture_randomized.csv  test_dataset.csv  train_dataset.csv
dataset/# OLD/: dataset.csv
dataset/data_acquisition/Filtered Data/: drop_dx_skeleton_pose.csv  drop_sx_skeleton_pose.csv  no_gesture_skeleton_pose.csv  pointat_dx_skeleton_pose.csv  pointat_sx_skeleton_pose.csv  take_dx_skeleton_pose.csv  take_sx_skeleton_pose.csv
dataset/data_acquisition/Original Data/: drop_dx_skeleton_pose.csv  drop_sx_skeleton_pose.csv  pointat_dx_skeleton_pose.csv  pointat_sx_skeleton_pose.csv  take_dx_skeleton_pose.csv  take_sx_skeleton_pose.csv
include/data_acquisition/: data_acquisition.h
include/show_skeleton/: show_skeleton.h
launch/: data_acquisition.launch  dataset_creation.launch  gesture_recognition.launch  neural_network.launch
model/: neural_network_model.h5
msg/: gesture_recognized.msg  gesture_recognized_array.msg  pointat_direction.msg
src/: dataset_creation.py  dataset_creation_node.py  gesture_recognition.py  neural_network.py
src/data_acquisition/: data_acquisition.cpp  data_acquisition_Node.cpp
src/show_skeleton/: show_skeleton.cpp  show_skeleton_Node.cpp
